<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, HelloOpenGLES20Activity!</string>
    <string name="app_name">HelloOpenGLES20</string>
    <string name="test_colours_only">Colours Only</string>
    <string name="test_texture_only">Texture Only</string>
    <string name="test_colours_and_texture">Colours and Texture</string>
    <string name="test_wireframe">Wireframe</string>
    <string name="test_filled">Filled</string>
    <string name="test_neither">Neither</string>
    <string name="test_rotation_axis">Rotation Axis</string>
    <string-array name="test_axes">
        <item >x</item>
        <item >y</item>
        <item >z</item>
    </string-array>
    <string name="test_has_normals">Normals</string>
    <string name="test_has_textures">Textures</string>
    <string name="test_has_colours">Colours</string>
    <string name="test_all">All</string>
    <string name="test_none">None</string>
    <string name="test_camera">Camera</string>
    <string name="test_light">Light</string>
    <string name="test_ortho">Orthographic Projection</string>
    <string-array name="test_ortho_planes">
        <item >left</item>
        <item >right</item>
        <item >bottom</item>
        <item >top</item>
        <item >near</item>
        <item >far</item>
    </string-array>
    <string name="test_angle">Angle</string>

</resources>